# advent-2021

./: .gitignore  Cargo.toml  README.md
day01/: day01.rs
day02/: day02.rs
day03/: day03.rs
day04/: day04.rs
day05/: day05.rs
day06/: day06.rs
day07/: day07.rs
day08/: day08.rs
day09/: day09.rs
day10/: day10.rs
day11/: day11.rs
day12/: day12.rs
day13/: day13.rs
day14/: day14.rs
day15/: day15.rs
day16/: day16.rs
day17/: day17.rs
day18/: day18.rs
day20/: day20.rs  example.txt
day21/: day21.go
