[package]
name = "advent-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day01"
path = "day01/day01.rs"
[[bin]]
name = "day02"
path = "day02/day02.rs"
[[bin]]
name = "day03"
path = "day03/day03.rs"
[[bin]]
name = "day04"
path = "day04/day04.rs"
[[bin]]
name = "day05"
path = "day05/day05.rs"
[[bin]]
name = "day06"
path = "day06/day06.rs"
[[bin]]
name = "day07"
path = "day07/day07.rs"
[[bin]]
name = "day08"
path = "day08/day08.rs"
[[bin]]
name = "day09"
path = "day09/day09.rs"
[[bin]]
name = "day10"
path = "day10/day10.rs"
[[bin]]
name = "day11"
path = "day11/day11.rs"
[[bin]]
name = "day12"
path = "day12/day12.rs"
[[bin]]
name = "day13"
path = "day13/day13.rs"
[[bin]]
name = "day14"
path = "day14/day14.rs"
[[bin]]
name = "day15"
path = "day15/day15.rs"
